bugfix: responsive fixes for the slider carousel on mobile

--- a/src/styles/Cards.module.scss
+++ b/src/styles/Cards.module.scss
@@ -188,7 +188,7 @@ $cards_visible3_width: 900px;
     font-weight: $font-bold;
 }
 .downloadButton {
-    background-color: #f3bb41;
+    background-color: $section_title_background_color;
     display: block;
     border-radius: 12px;
     text-align: center;
