--- a/src/styles/Carousel.module.scss
+++ b/src/styles/Carousel.module.scss
@@ -1,9 +1,8 @@
 .carouselWrapper {
     display: flex;
-    overflow:  auto;
-    width: 90%;
+    overflow: auto;
+    width: 100%;
     background: rgba(255, 122, 89, 0);
-    // border: 10px solid purple;
     scroll-snap-type: proximity;
 }
 
@@ -47,11 +46,9 @@
 .arrow {
     position: fixed;
     top: 40%;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    cursor: pointer;
     user-select: none;
     z-index: 10;
+    cursor: default;
     // To hide the button when it starts to look weird
     // @container (max-width: 850px) {
     //     display: none;
@@ -59,9 +56,13 @@
 }
 
 .rightArrow {
-    right: -1.5%;
+    right: -1rem;
 }
 
 .leftArrow {
-    left: -1.5%;
+    left: -0.5rem;
+}
+
+.clickable {
+    cursor: pointer !important;
 }
