--- a/src/styles/StoryPage.module.scss
+++ b/src/styles/StoryPage.module.scss
@@ -12,6 +12,5 @@
     @media screen and (min-width: $tablet-breakpoint) and (min-height: $toc_height) {
         margin-right: $toc_width; // only save space if the toc is visible
     }
-    overflow-x: hidden;
     max-width: 1200px;
 }
